Fixed header items alignment

--- a/frontend/src/components/App/AppNavBar/AppNavBar.module.css
+++ b/frontend/src/components/App/AppNavBar/AppNavBar.module.css
@@ -19,8 +19,12 @@
   list-style-type: none;
 }
 
-.fixRight {
+.alignRight {
   justify-self: end;
+}
+
+.alignCenter {
+  justify-self: center;
 }
 
 .navList .navItem {
